Closed Bug 143390 Opened 22 years ago Closed 14 years ago

Arrow keys stuck when Chinese ChangJie and Japanese IME's are used

Categories

(Core :: Widget: Win32, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- -

People

(Reporter: lapsap7+mz, Assigned: masayuki)

Details

(Keywords: inputmethod)

Attachments

(1 file, 2 obsolete files)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.0.0+)
Gecko/20020503
BuildID:    20020503

(The summary may not be very descriptive -- I don't know how to find better words.)

This bug has been here since long time ago, and I've mentioned it in another bug
but it doesn't seem to catch any attention, so I file it here as a separate bug.

I'm using Win2k and when I'm using ChangJie IME as well, in some situations that
I'll describe below, the cursor doesn't respond to arrow keys and I have to
press ESC to make it work.

There're two situations:
1) A character is inputted and no associative words are suggested by IME: eg,
the interjection "oh" whose ChangJie code is "rhbk".
2) A character is inputted and an associative word is chosen from the list. 
(Attention, only one single associative word, not two or more associative
words).  For example, "week" (literally "star period" in Chinese) whose first
character's code is "ahqm" and from the list, choose the first one by pressing
Shift+1 (I suppose the list of associative words is the same for all language
versions of Win2k).
Try "Monday" (similar to input "week" but choose the second item in the
association list) which consists of three Chinese characters and the problem
isn't there.

It's a Chinese input problem, so it's very hard to explain it in English. 
Please write email to me if more information is needed and I'll write Chinese
there.  Or can I write Chinese in BugZilla?

I'm wondering if it's the same in other IME's like those in Simplified Chinese
or Japanese.

Reproducible: Always
The other bug I mentioned about is bug 113423
-->varada, but probably an editor bug...
Assignee: ducarroz → varada
I think "i18n" is a better component than "composition", so I change this.
Component: Composition → Internationalization
CAn this be reproduced on a recent nightly?
I'm using Mozilla 1.6 stable built and I can confirm that this bug is still there.

I suspect that it's because Microsoft had remade the way applications
communicate with IME that Mozilla might be using an old way to do it.  No?
I experience the same problem on my Netscape 7.2 at home and 7.1 at work. In
both cases, I'm using a Japanese IME, whatever comes with Windows XP.
Thanks for confirming that I'm not the only one having this bug.  I think I
could change the status to Confirm, even though it's not the usual procedure.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: Arrow keys stuck when ChangJie IME is used → Arrow keys stuck when Chinese ChangJie and Japanese IME's are used
Product: MailNews → Core
Product: Core → MailNews Core
QA Contact: esther → i18n
Holly, can you reproduce this?
I don't think that this is Thunderbird/MailNews core.  This issue is editor and IME handling.

Nakano-san, do you know that this is fixed by bug 113423 or other bug?
Assignee: vparthas → masayuki
Component: Internationalization → Widget: Win32
Product: MailNews Core → Core
QA Contact: i18n → win32
Thanks, this should be a bug of nsIMM32Handler.
Status: NEW → ASSIGNED
Attached patch Patch v1.0 (obsolete) — Splinter Review
seems it's risky...

I'll test this on each Windows.
Comment on attachment 437234 [details] [diff] [review]
Patch v1.0

This patch doesn't work on XP.
Attachment #437234 - Flags: review-
Attached patch Patch v2.0 (obsolete) — Splinter Review
Attachment #437234 - Attachment is obsolete: true
Attached patch Patch v3.0Splinter Review
works fine for me with:

MS-IME, ATOK, VJE-Delta, WXG4, ChanJie, MS Korean Input, Microsoft PinYin 2002, QuanPin, ZhengMa on WinXP.

MS-IME, ATOK, Korean IME, ChanJie on Win7.
Attachment #437315 - Attachment is obsolete: true
Attachment #464685 - Flags: review?(jmathies)
(In reply to comment #15)
> jimm?

Is this needed for 4.0? If so, please nominate. Otherwise it'll have to wait.

(Is this relevant? Win2k isn't a supported platform.)
I think that this bug causes bad experience for most Chinese people when they input Chinese text. And this bug is also reproduced on WinXP too. And this bug should be reproduced on Vista and later with 3rd party's IME if it sends same messages.
blocking2.0: --- → ?
Does this happen only with third party IMEs, or all of them?
blocking2.0: ? → -
(In reply to comment #18)
> Does this happen only with third party IMEs, or all of them?

The ChangJie (comment 0's) is a standard IME of Windows.

I meant that if 3rd party's IME sends same message during composition, this bug can be reproduced with it on any versions of Windows (typically, most IMEs process all messages (so, keydown messages come with VK_PROCESSKEY), but looks like that some Chinese IMEs pass the some keys' message without any processing, and they assume that editor moves caret by the passed key down messages.  However, we ignore the all WM_KEYDOWN messages during composition because nsEditor doesn't support it (and we assumed that all WM_KEYDOWM messages come with VK_PROCESSKEY during composition). Therefore, we should cancel the composition if IME allows us to move caret.

On the other hand, Vista and later's standard IMEs are recreated for TSF, therefore, the behavior of the standard IMEs has been changed on Vista and later.

(NOTE: Vista and later discard IMM internally. However, IMM IME can run on them because it's emulated on TSF.)

I think that this bug shouldn't block strongly. However, if we can fix this bug easily, we should do it for the many users.
How about we not block on it, and I just approve your patch? :)
Comment on attachment 464685 [details] [diff] [review]
Patch v3.0

This has been sitting in my queue for about a week. Unfortunately I can't test this but I'd trust masayuki on it.
Attachment #464685 - Flags: review?(jmathies) → review+
Comment on attachment 464685 [details] [diff] [review]
Patch v3.0

Thank you, Jimm.

This patch fixes this ancient bug. I think this fix makes many Chinese people happy. And this patch doesn't affect non-IME users and other IME behavior because most IMEs process all key events during composition (then, the keycode is replaced with VK_PROCESSKEY by IME).
Attachment #464685 - Flags: approval2.0?
Attachment #464685 - Flags: approval2.0? → approval2.0+
http://hg.mozilla.org/mozilla-central/rev/1cc1070b27ff
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: