Bug 143390 Support handling WM_KEYDOWN during composition r=jmathies, a=joe